# PillSee

./: .gitignore  CLAUDE.md  Diagram bez názvu.drawio  INITIAL.md  Project brief.md  README  README.md  docker-compose.yml  pillsee-comprehensive-development-guide (1).md  pillsee-drug-database-api.md  pillsee-frontend-structure.md  pillsee-langchain-backend-design.md  pillsee-repository-structure.md  pillsee-updated-architecture-with-frontend (1).md  quick-setup.sh  supabase-setup.sql  test-supabase-connection.py
PRPs/: pillsee-medical-ai-assistant.md
pillsee-backend/: .dockerignore  Dockerfile  README.md  import_sukl_data.py  main.py  pyproject.toml  pytest.ini  requirements.txt  sukl_data_downloader.py
pillsee-backend/app/: __init__.py  config.py  main.py  models.py
pillsee-backend/app/ai/: __init__.py  text_processor.py  vision_processor.py
pillsee-backend/app/data/: __init__.py  sukl_processor.py
pillsee-backend/app/database/: __init__.py  vector_store.py
pillsee-backend/app/workflows/: __init__.py  medication_workflow.py
pillsee-backend/data/: nkod_dlp_atc.csv  sukl_comprehensive_test_data.csv  sukl_extended_test_data.csv
pillsee-backend/tests/: __init__.py  conftest.py  test_api.py  test_sukl_processor.py
pillsee-frontend/: .dockerignore  Dockerfile  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.ts
pillsee-frontend/__tests__/: api.test.ts  pwa.test.ts  session.test.ts
pillsee-frontend/app/: globals.css  layout.tsx  page.tsx
pillsee-frontend/utils/: api.ts  (+1 more)
supabase/: config.toml
(+11 files in other folders)
